# mini_code_agent

./: .env.example  .gitignore  ArchitectureFramework.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: eval-known-issues.md
eval/tasks/L1-add-classmethod/: task.yaml  validate.py
eval/tasks/L1-add-docstring/: task.yaml  validate.py
eval/tasks/L1-add-function/: task.yaml  validate.py
eval/tasks/L1-fix-failing-test/: task.yaml  validate.py
eval/tasks/L1-rename-var/: task.yaml  validate.py
eval/tasks/L2-add-model-field/: task.yaml  validate.py
eval/tasks/L2-cache-decorator/: task.yaml  validate.py
eval/tasks/L2-print-to-logger/: task.yaml  validate.py
eval/tasks/L2-split-large-function/: task.yaml  validate.py
eval/tasks/L3-api-integration/: task.yaml  validate.py
eval/tasks/L3-find-and-fix-bugs/: task.yaml  validate.py
eval/tasks/L3-refactor-module/: task.yaml  validate.py
eval/tasks/L4-express-auth/: task.yaml  validate.py
eval/tasks/L4-script-to-project/: task.yaml  validate.py
scripts/: compare_lsp_servers.py  e2e_longrun.py
src/mini_code_agent/: __init__.py
tests/: test_agent.py  test_artifacts.py  test_checkpoint.py  test_context.py  test_edit.py  test_eval_benchmark.py  test_eval_cli.py  test_eval_runner.py  test_eval_snapshot.py  test_eval_tracker.py  test_git.py  test_graph_executor_l1.py  test_incremental_verifier.py  test_ledger.py  test_ledger_integration.py  test_llm.py  test_lsp.py  test_memory.py  test_planner.py  test_safety.py  test_task_graph.py  test_tool_validation.py  test_tools.py  test_verifier.py
(+117 files in other folders)
